--- a/src/components/TimePicker/TimePicker.module.css
+++ b/src/components/TimePicker/TimePicker.module.css
@@ -7,8 +7,7 @@
 /* Root */
 .timePicker {
   position: relative;
-  display: inline-flex;
-  width: fit-content;
+  width: 100%;
 }
 
 /* ==========================================================================
@@ -63,6 +62,7 @@
 .editableContent {
   display: flex;
   align-items: center;
+  width: 100%;
   cursor: pointer;
 }
 
